ProgramTests/Invalid_Tests/void_variables.decaf
void var1;
void var2[100];
void var3[0];

def int main() {
    void var5;
    void var6[100];

    return 0;
}